<?xml version="1.0"?>
<package>
  <name>waas_launch</name>
  <version>1.0.0</version>
  <description>WAAS Launch</description>

  <maintainer email="alan.meekins@gmail.com">Alan Meekins</maintainer>

  <license>BSD</license>

  <url type="website">https://github.com/sevenbitbyte/waas</url>

  <author email="alan.meekins@gmail.com">Alan Meekins</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>pointdownsample</build_depend>
  <build_depend>ola_dm_driver</build_depend>
  <build_depend>waas_control</build_depend>
  <run_depend>pointdownsample</run_depend>
  <run_depend>ola_dm_driver</run_depend>
  <run_depend>waas_control</run_depend>
</package>
